--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Recite & Listen the Holy Quran Online in Arabic with translation in English/Urdu - Simple Quran.">
+    <meta name="keywords" content="Quran,Holy Quran,Listen Quran,Surrah,Recite Quran,Alsiraj app">
+    <meta name="author" content="Waleed Nasir Alsiraj">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alsiraj App || By Waleed Nasir</title>
