--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="bSoUhwMcVoTTtIv1Scv5icZNvC-nKU-9_rQVYeEoGy0" />
     <meta name="description" content="Recite & Listen the Holy Quran Online in Arabic with translation in English/Urdu - Simple Quran.">
     <meta name="keywords" content="Quran,Holy Quran,Listen Quran,Surrah,Recite Quran,Alsiraj app">
     <meta name="author" content="Waleed Nasir Alsiraj">
