--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="bSoUhwMcVoTTtIv1Scv5icZNvC-nKU-9_rQVYeEoGy0" />
-    <meta name="description" content="Recite & Listen the Holy Quran Online in Arabic with translation in English/Urdu - Simple Quran.">
+    <meta name="description" content="Recite & Listen the Holy Quran Online in Arabic with translation in English/Urdu - Quran App.">
     <meta name="keywords" content="Quran,Holy Quran,Listen Quran,Surrah,Recite Quran,Alsiraj app">
     <meta name="author" content="Waleed Nasir Alsiraj">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alsiraj App || By Waleed Nasir</title>
+    <title>Quran App </title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
